--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gra snake</title>
     <script src="/logon.js" defer></script>
     <link rel="stylesheet" href="/style2.css">
+    <script src="/getDashboard.js" defer></script>
 </head>
 <body>
     <div class="login">
@@ -25,6 +26,14 @@
         </div>
         <div class="displayData"></div>
         <div class="logging"></div>
+    </div>
+    <div class="dashboard">
+        <table>
+            <tr>
+                <th>Gracz</th>
+                <th>Punkty</th>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
