--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,14 @@
 </head>
 <body>
     <div class="login">
-        <label for="login">Login: </label>
-        <input type="text" name="login" id="login"><br>
-        <label for="passw">Hasło: </label>
-        <input type="password" name="passw" id="passw"><br><br>
-        <button id="logon">Zaloguj</button>
-        <button id="register">Załóź konto</button><br><br>
+            <div class="hideLogin">
+                <label for="login">Login: </label>
+                <input type="text" name="login" id="login"><br><br>
+                <label for="passw">Hasło: </label>
+                <input type="password" name="passw" id="passw"><br><br>
+                <button id="logon">Zaloguj</button>
+                <button id="register">Załóź konto</button><br><br>
+            </div>
         <div class="registerDiv">
             <label for="registerLogin">Login: </label>
             <input type="text" name="login" id="registerLogin"><br>
@@ -26,6 +28,14 @@
         </div>
         <div class="displayData"></div>
         <div class="logging"></div>
+    </div>
+    <h2>O stronie</h2>
+    <div class="about">
+        <span>
+            Prosta gra w snake napisana w pure JS z możliwości założenia konta.<br>
+            Serwer jest postawiony na środowisku Node.js. Serwer wykorzystuje framework Express.<br>
+            Baza danych użyta w projekcie to MongoDB. Autoryzacja dostępu realizowana jest za pomocą JSON Web Token.
+        </span>
     </div>
     <div class="dashboard">
         <table>
