--- a/public/game/game.html
+++ b/public/game/game.html
@@ -14,8 +14,9 @@
     <button id="logoff">Wyloguj</button>
     <div class="bestScore"></div>
     <div class="container">
-        Wielkość: <input type="number" id="height"><br><br>
-        Szerokość: <input type="number" id="width"><br><br>
+        Podaj wielkość planszy gry:<br>
+        Szerokość: <input type="number" id="height"><br><br>
+        Długość: <input type="number" id="width"><br><br>
         Tryb: <select id="tryb">
             <option value="150">Łatwy</option>
             <option value="100">Średni</option>
@@ -23,11 +24,11 @@
         </select><br><br>
         <input type="button" value="Graj" id="btn"><br><br><br>
         <div class="popUp">
+            Przegrałeś!<br>
             <div id="score"></div>
             <div id="len"></div>
-        </div>
-        <canvas class="canvas">
-        </canvas>
+        </div><br>
     </div>
+    <canvas class="canvas"></canvas>
 </body>
 </html>
