--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <div class="about">
         <span>
             Prosta gra w snake napisana w pure JS z możliwości założenia konta.<br>
-            Serwer jest postawiony na środowisku Node.js. Serwer wykorzystuje framework Express.<br>
+            Serwer jest postawiony na środowisku Node.js, wykorzystuje framework Express.<br>
             Baza danych użyta w projekcie to MongoDB. Autoryzacja dostępu realizowana jest za pomocą JSON Web Token.
         </span>
     </div>
